--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "calculator",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "termicalc",
+  "version": "0.0.1",
+  "description": "A simple calculator that runs in the terminal",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "calc": "npx tsx src/index.ts",
     "build": "tsc && tsc-alias"
   },
   "keywords": [],
-  "author": "",
+  "author": "Emmanuel Essien",
   "license": "ISC",
   "bin": {
     "termicalc": "dist/index.js",
@@ -20,5 +20,7 @@
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
-  }
+  },
+  "files": ["dist"],
+  "repository": {"type": "git", "url": "https://github.com/Essien-Emmanuel/Terminal-calculator.git"}
 }
